--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="https://i.imgur.com/yShUjRD.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="https://xatimg.com/image/jGTouz6oIAB0.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Sed ipsum dolor</h2>
@@ -54,10 +54,10 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="https://i.imgur.com/rnaFqJC.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="https://xatimg.com/image/Vu7MPLNJpFwc.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
+									<h2>Descarga y pon la tercera imagen que quieras, subiéndola a xatimg</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
